# flowzero-cli

./: README.md  TEST_PLAN.md  config.yaml  generate_aoi.py  main.py  orders.json  pyproject.toml  setup.py
AOI Shapefiles/Salinas/: DrySpy_AOI_SalinasRiver.dbf  DrySpy_AOI_SalinasRiver.sbn  DrySpy_AOI_SalinasRiver.sbx  DrySpy_AOI_SalinasRiver.shp  DrySpy_AOI_SalinasRiver.shp.xml  DrySpy_AOI_SalinasRiver.shx
AOI Shapefiles/SantaClara/: DrySpy_AOI_SantaClaraRiver_central.dbf  DrySpy_AOI_SantaClaraRiver_central.sbn  DrySpy_AOI_SantaClaraRiver_central.sbx  DrySpy_AOI_SantaClaraRiver_central.shp  DrySpy_AOI_SantaClaraRiver_central.shp.xml  DrySpy_AOI_SantaClaraRiver_central.shx
AOI Shapefiles/Scott/: DrySpy_AOI_ScottRiver.dbf  DrySpy_AOI_ScottRiver.sbn  DrySpy_AOI_ScottRiver.sbx  DrySpy_AOI_ScottRiver.shp  DrySpy_AOI_ScottRiver.shp.xml  DrySpy_AOI_ScottRiver.shx
AOI Shapefiles/Virtual_gage_DrySpy_20241030_Cosumnes_Badger/: Virtual_gage_DrySpy_20241030_Cosumnes_Badger.dbf  Virtual_gage_DrySpy_20241030_Cosumnes_Badger.sbn  Virtual_gage_DrySpy_20241030_Cosumnes_Badger.sbx  Virtual_gage_DrySpy_20241030_Cosumnes_Badger.shp  Virtual_gage_DrySpy_20241030_Cosumnes_Badger.shp.xml  Virtual_gage_DrySpy_20241030_Cosumnes_Badger.shx
docs/: ARCHITECTURE.md  OPTIMIZATIONS.md
flowzero/: __init__.py  config.py
flowzero/api/: __init__.py  planet.py  s3.py
flowzero/cli/: aoi.py  (+6 more)
geojsons/: DrySpy_AOI_SalinasRiver.geojson  DrySpy_AOI_SantaClaraRiver_central.geojson  DrySpy_AOI_ScottRiver.geojson  Virtual_gage_DrySpy_20241030_Cosumnes_Badger.geojson
scripts/: migrate_json_to_db.py
(+13 files in other folders)
