[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flowzero-orders-cli"
version = "2.0.0"
description = "CLI tool for ordering Planet Labs satellite imagery for river monitoring"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.scripts]
flowzero = "flowzero.cli.app:cli"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=flowzero --cov-report=term-missing"
